Fix: AsideNav was not showing router active

--- a/src/app/+app/shared/aside-nav/aside-nav.component.scss
+++ b/src/app/+app/shared/aside-nav/aside-nav.component.scss
@@ -44,7 +44,7 @@
           border-color: #ADADAD;
         }
 
-        &.router-link-active{
+        &.active{
           color: #333;
           background-color: #AAB6BA;
           border-color: #ADADAD;
